--- a/config/database.yml
+++ b/config/database.yml
@@ -29,7 +29,19 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  database: kpipe_production
+  username: doctor
+  password: 7Roasts
+  host: localhost
+  socket: /var/run/mysqld/mysqld.sock
   pool: 5
   timeout: 5000
+
+
+
+  #adapter: sqlite3
+  #database: db/production.sqlite3
+  #pool: 5
+  #timeout: 5000
