--- a/config/database.yml
+++ b/config/database.yml
@@ -31,9 +31,9 @@ test:
 production:
   adapter: mysql2
   encoding: utf8
-  database: failureu_kpipe
-  username: failureu_doctor
-  password: Roastingpans783!
+  database: kpipe_development
+  username: root
+  password: 
   host: localhost
   socket: /var/run/mysqld/mysqld.sock
   pool: 5
