--- a/config/database.yml
+++ b/config/database.yml
@@ -29,15 +29,22 @@ test:
   timeout: 5000
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  database: kpipe_development
-  username: root
-  password: 
-  host: localhost
-  socket: /var/run/mysqld/mysqld.sock
+  adapter: postgresql
+  encoding: unicode
+  database: kpipe_production
   pool: 5
-  timeout: 5000
+  username: root
+  password:
+  
+  #adapter: mysql2
+  #encoding: utf8
+  #database: kpipe_development
+  #username: root
+  #password: 
+  #host: localhost
+  #socket: /var/run/mysqld/mysqld.sock
+  #pool: 5
+  #timeout: 5000
 
 
 
