--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -5,6 +5,7 @@ businessplan.png: businessplan-e479de3c5371a18530a128406b645845.png
 emergency.png: emergency-48817c82822968f141c6dbd812cd55a4.png
 failureu.png: failureu-228abaa87130344e310265e757467726.png
 kpipelogo.jpg: kpipelogo-1ac137f837ffd31117755f79f6e91659.jpg
+kpipetextlogo.jpg: kpipetextlogo-be4729febf64493f7fa35aba0fd7ec32.jpg
 mexicobusiness.png: mexicobusiness-5a057463ef648dba3a38097b181f343c.png
 powerpoint.png: powerpoint-17e4eb9ccdb40e7f072bada53e3c371a.png
 proofreading.png: proofreading-d0c8b4a7c6febd57d0ba01a2658987c4.png
@@ -16,4 +17,4 @@ socialmedia.png: socialmedia-35e1477b5f01c2a2ded4f8841f46b162.png
 strategic.png: strategic-eaddc25f05e322fd47b197aaea2d7fb2.png
 wordpress.png: wordpress-076a60750da6a045bb746c03611bd2f7.png
 application.js: application-941750bc8bdb63e5b83a96b42a5bde6b.js
-application.css: application-e7f3eadc4854d8023e0cdc2b5fbd7f71.css
+application.css: application-2d507605a9b3c14910b0557c6bb01fca.css
