--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,12 +1,15 @@
 ---
+audit.png: audit-4d4b40d7176c676729468c9b32e7fbac.png
 bigdecisions.png: bigdecisions-59d42d0b85aeb8cf9e6987d5ca69c7a8.png
 brainstorming.png: brainstorming-1c8692c5e06af19253772976caadb05d.png
 businessplan.png: businessplan-e479de3c5371a18530a128406b645845.png
 emergency.png: emergency-48817c82822968f141c6dbd812cd55a4.png
 failureu.png: failureu-228abaa87130344e310265e757467726.png
+instructionpages.png: instructionpages-1e0bf93a8716f541ff26645db438a1c4.png
 kpipelogo.jpg: kpipelogo-1ac137f837ffd31117755f79f6e91659.jpg
 kpipetextlogo.jpg: kpipetextlogo-be4729febf64493f7fa35aba0fd7ec32.jpg
 mexicobusiness.png: mexicobusiness-5a057463ef648dba3a38097b181f343c.png
+microscope.png: microscope-f9c996d0ba32535c847e68c824321f92.png
 powerpoint.png: powerpoint-17e4eb9ccdb40e7f072bada53e3c371a.png
 proofreading.png: proofreading-d0c8b4a7c6febd57d0ba01a2658987c4.png
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
@@ -15,6 +18,8 @@ resume.png: resume-6eafe84f806f14d87b16f61c1bf0cb48.png
 russian.png: russian-9bfa173f74917c7a5c9fe88413fa6b80.png
 socialmedia.png: socialmedia-35e1477b5f01c2a2ded4f8841f46b162.png
 strategic.png: strategic-eaddc25f05e322fd47b197aaea2d7fb2.png
+trainingmodule.png: trainingmodule-54399f8b3ecf864fb0e4b7bc3d0e1830.png
+videoprod.png: videoprod-a85889477042270c9e6a4e39770c6581.png
 wordpress.png: wordpress-076a60750da6a045bb746c03611bd2f7.png
-application.js: application-941750bc8bdb63e5b83a96b42a5bde6b.js
+application.js: application-c22cda082782cd25a656cbdf1be81cee.js
 application.css: application-d3101ee1ec190b0c781fadca90df43bc.css
